@@ -54,7 +54,7 @@ final class Out
 	
 	void append(final Cop cop)
 	{
-		bf.append(XMLEncoder.encode(cop.toString()));
+		bf.append(XMLEncoder.encode(cop.toURL()));
 	}
 	
 	void writeBody(final HttpServletResponse response) throws IOException
